--- a/Xeber/Views/AdminRole/Index.cshtml
+++ b/Xeber/Views/AdminRole/Index.cshtml
@@ -1,20 +1,19 @@
 ﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityRole>
 @{
-    Layout = "~/Views/Shared/_UserLayout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
     <div class="bg-primary text-white p-1 m-1">
         <h2> Role List</h2>
     </div>
     <div class="text-danger" asp-validation-summary="All"></div>
+    @if (TempData["message"]!=null)
+     {
+        <div class="alert alert-success">
+         @TempData["message"];
+        </div>
+     }
     <table class="table table-bordered table-sm table-striped p-1 m-1">
         <tr>
             <th> Role Id</th>
@@ -26,7 +25,7 @@
         {
             <tr>
                 <td colspan="4" class="text-center">
-                    User Yoxdur
+                    Rol Yoxdur
                 </td>
             </tr>
         }
@@ -52,5 +51,4 @@
 
     </table>
     <a class="btn btn-primary" asp-action="Create">Create Role</a>
-</body>
-</html>
+
