--- a/Xeber/Views/Categories/Delete.cshtml
+++ b/Xeber/Views/Categories/Delete.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<div class="alert-danger">
+    <h3>Bu xeberi silmek istediyinizden eminsiniz?</h3>
+</div>
 <div>
     <h4>Category</h4>
     <hr />
@@ -25,7 +25,7 @@
             @Html.DisplayFor(model => model.CatImg)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
