--- a/Xeber/Views/Shared/_Layout.cshtml
+++ b/Xeber/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using X.PagedList.Mvc.Core
+@using X.PagedList
 @{
     Layout = null;
 }
@@ -11,25 +12,23 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/78ef0287c3.js" crossorigin="anonymous"></script>
     <title>@Html.Raw(ViewBag.Title)</title>
-
+    <link href="~/_BreadCrumb.css" rel="stylesheet" />
     <style>
 
-
-
-
-        ul {
-            position: fixed
+        .pagination {
+            z-index: 1;
         }
 
         .myUl {
             list-style-type: none;
             margin: 0;
             padding: 0;
-            background-color: #34495e;
+            background-color: black;
             z-index: 1;
             width: 100%;
-            position: fixed
+            position: fixed;
         }
 
         .navMenu {
@@ -43,11 +42,9 @@
             text-decoration: none;
             padding: 15px 20px;
         }
-
         /*.navMenu .navbar-brand {
                 background-color: #f39c12;
             }*/
-
         .active,
         .navMenu:not(:last-child):hover {
             background-color: #808080
@@ -59,50 +56,34 @@
             position: absolute;
             width: 100px
         }
-
         /*.myUl .navMenu:hover .myUl {
             display: block;
         }*/
-
         .navMenu .myUl .navMenu {
             display: block;
         }
 
-        footer {
-            top: 95%;
+        .card-footer {
             min-height: 5%;
             width: 100%;
             color: black;
             text-align: center;
+            margin: 0;
         }
     </style>
 </head>
 <body>
-    <nav>
-        <ul class="myUl" id="myull">
-
-
-            <li class="navMenu "><a asp-controller="News" asp-action="Index" class=" navbar-brand">Ana Sehife</a></li>
-
-            <li class="navMenu"><a asp-controller="News" asp-action="Idman" class="navbar-brand">Idman</a></li>
-
-            <li class="navMenu"><a asp-controller="News" asp-action="Iqtisadiyyat" class="navbar-brand">Iqtisadiyyat</a></li>
-
-            <li class="navMenu"><a asp-controller="News" asp-action="Auto" class=" navbar-brand">Auto</a></li>
-
-            <li class="navMenu"><a asp-controller="News" asp-action="SouBiznes" class="navbar-brand">Sou-Biznes</a></li>
-
-            <li class="navMenu" style="margin-right:0"> @Html.Partial("_Search")</li>
-            <li><a><i class="fab fa-facebook-square my-2"></i></a></li>
-        </ul>
-    </nav>
-
-    <div style="height:auto;margin-left:300px" class="col-md-8">
+    
+        @await Component.InvokeAsync("CategoryMenu")
+    
+    <div style="margin:72px 300px" class="d-flex justify-content-center col-md-8">
         @RenderBody()
     </div>
 
     <footer>
-        <p>&copy; 2020 --Xeberler</p>
+        <div class="card-footer">
+            <p>&copy; 2020 --Xeberler</p>
+        </div>
     </footer>
 
 
@@ -113,20 +94,19 @@
             integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
- 
-    <script type="text/javascript">
-       (function() {
-    var current = location.pathname;
-    $('#myull li a').each(function() {
-        var $this = $(this); 
 
-        // we check comparison between current page and attribute redirection.
-        if ($this.attr('href') === current) {
-            $this.addClass('active');
-        }
-    });
-})();
-        </script>
+    <script type="text/javascript">
+        (function () {
+            var current = location.pathname;
+            $('#myull li a').each(function () {
+                var $this = $(this);
+                // we check comparison between current page and attribute redirection.
+                if ($this.attr('href') === current) {
+                    $this.addClass('active');
+                }
+            });
+        })();
+    </script>
     @RenderSection("scripts", false)
 </body>
 </html>
