--- a/Xeber/Views/User/Create.cshtml
+++ b/Xeber/Views/User/Create.cshtml
@@ -1,17 +1,10 @@
 ﻿@model Xeber.Models.RegisterModel
 @{
-     Layout = "~/Views/Shared/_UserLayout.cshtml";
+     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
-    <div class="bg-primary text-white p-1 m-1">
+    <div style="margin-top:80px" class="bg-primary text-white p-1 m-1">
         <h2> Create User </h2>
     </div>
     <form class="m-1 p-1 form-control-sm" asp-action="Create" method="post">
@@ -31,5 +24,4 @@
         <input type="submit" class="btn btn-primary" value="Submit" />
         <button asp-controller="User" asp-action="Index" class="btn btn-danger" >Cancel</button>
     </form>
-</body>
-</html>
+
