--- a/Xeber/Views/News/Details.cshtml
+++ b/Xeber/Views/News/Details.cshtml
@@ -9,9 +9,8 @@
 
             @Html.Partial("_BreadCrumbs")
 
-
-            <img src="~/img/@Model.NewsImg" width="500" height="350" asp-append-version="true" alt="...">
-            <p style="width:250px;font-size:20px;font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif"> @Html.DisplayFor(modelItem => Model.NewsTitle)</p>
+            <h2 style="width:750px;font-size:20px;font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif"> @Html.DisplayFor(modelItem => Model.NewsTitle)</h2>
+            <img style="border-radius:20px" src="~/img/@Model.NewsImg" width="500" height="350" asp-append-version="true" alt="...">
             <p style="width:250px"> @Html.Raw(Model.NewsContent)</p>
             <p><b><time datetime="@Model.CreateDate.ToString("yyyy-MM-dd-HH-ss")">@Model.CreateDate.ToString("dd MMMM yyyy HH:ss")</time></b> tarixinde elave edildi</p>
 
@@ -20,7 +19,6 @@
         </div>
       
     </div>
- 
 
   
 
