--- a/Xeber/Views/Shared/_AdminLayout.cshtml
+++ b/Xeber/Views/Shared/_AdminLayout.cshtml
@@ -82,9 +82,15 @@
 
         </ul>
     </nav>
-   
+    <div class="container">
+        @if ( TempData["message"]!=null)
+        {
+        <div class="alert alert-success">
+            @TempData["message"]
+        </div>
+        }
         @RenderBody()
-    
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
             integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
