https://github.com/Hesim97/Xeber.git

--- a/Xeber/Views/Categories/Create.cshtml
+++ b/Xeber/Views/Categories/Create.cshtml
@@ -20,14 +20,14 @@
                 <span asp-validation-for="CatImg" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a class="btn btn-success" asp-action="Index">Geri</a>
+    <a class="btn btn-primary" asp-action="Index">Geri</a>
     
 </div>
 
