--- a/Xeber/Views/Admin/Edit.cshtml
+++ b/Xeber/Views/Admin/Edit.cshtml
@@ -35,7 +35,7 @@
                 </div>
                 <div class="form-group">                 
                     <img src="~/img/@Model.NewsImg" width="110" />
-                    <input type="file" name="file" id="file" class="form-control" required/>          
+                    <input type="file" name="file" id="file" class="form-control" value="@ViewBag.Img"/>    
                 </div>
                 <div class="form-group">
                     <div class="checkbox">
