--- a/Xeber/Views/Shared/Components/CategoryMenu/Default.cshtml
+++ b/Xeber/Views/Shared/Components/CategoryMenu/Default.cshtml
@@ -1,13 +1,16 @@
-﻿@model IEnumerable<Category>
-
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer _localizer
+@model IEnumerable<Category>
 <nav class="nav">
     <ul class="myUl" id="myull">
-        <li class="navMenu "><a asp-controller="News" asp-action="Index" asp-route-id="" class=" navbar-brand">Ana Sehife</a></li>
+        <li class="navMenu "><a asp-controller="News" asp-action="Index" asp-route-id="" class=" navbar-brand">Baş Səhifə</a></li>
         @foreach (var item in Model)
         {
-            <li class="navMenu "><a asp-controller="News" asp-action="Index" asp-route-id="@item.Id" class=" navbar-brand">@item.CatName</a></li>
+            <li class="navMenu"><a asp-controller="News" asp-action="Index" asp-route-id="@item.Id" class=" navbar-brand">@_localizer[@item.CatName]</a></li>
         }
-        <li class="navMenu"> @Html.Partial("_Search")</li>
+        <li class="navMenu">@Html.Partial("_Search")</li>
+
+
     </ul>
 </nav>
 
