--- a/Xeber/Views/Shared/_Search.cshtml
+++ b/Xeber/Views/Shared/_Search.cshtml
@@ -1,5 +1,6 @@
-﻿
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer _localizer
 <form class="form-inline my-2 my-lg-0" asp-controller="News" asp-action="Index" method="get">
-    <input id="q" name="q" class="form-control mr-sm-2"  type="text" placeholder="Axtar"/>
-    <button class="btn btn-outline-success my-2 my-sm-0 " type="submit">Axtar</button>
+    <input id="q" name="q" class="form-control mr-sm-2" type="text" placeholder=@_localizer["Axtar"] />
+    <button class="btn btn-outline-success my-2 my-sm-0 " type="submit">@_localizer["Axtar"]</button>
 </form>
