--- a/Xeber/Views/_ViewImports.cshtml
+++ b/Xeber/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@using Xeber.Entity
+@using Microsoft.AspNetCore.Mvc.Localization
+@using Microsoft.Extensions.Options
 @addTagHelper*,Microsoft.AspNetCore.Mvc.TagHelpers
