--- a/Xeber/Views/Admin/Create.cshtml
+++ b/Xeber/Views/Admin/Create.cshtml
@@ -7,7 +7,7 @@
 @section scripts{
     <script src="~/lib/ckeditor/ckeditor.js"></script>
     <script>
-        CKEDITOR.replace("NewsContent");
+        CKEDITOR.replace("NewsContent","NewsContentRu","NewsContentEn");
     </script>
 }
 
@@ -18,32 +18,32 @@
             <form asp-action="Create" method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="NewsTitle" class="control-label"></label>
+                    <label class="control-label">Basliq</label>
                     <input asp-for="NewsTitle" class="form-control" required />
                     <span asp-validation-for="NewsTitle" class="text-danger"></span>
-                </div>
+                </div>         
                 <div class="form-group">
                     <label class="control-label">Category</label>
                     <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId" required></select>
                 </div>
                 <div class="form-group">
-                    <label asp-for="NewsContent" class="control-label"></label>
+                    <label  class="control-label">Mezmun</label>
                     <textarea asp-for="NewsContent" class="form-control" required></textarea>
                     <span asp-validation-for="NewsContent" class="text-danger"></span>
-                </div>
+                </div>              
                 <div class="form-group">
                     <label>Image</label>
                     <input type="file" name="file" id="file" class="form-control" required />
                 </div>
                 @*<div class="form-group">
-            <label asp-for="NewsImg" class="control-label"></label>
-            <input asp-for="NewsImg" class="form-control" />
-            <span asp-validation-for="NewsImg" class="text-danger"></span>
-        </div>*@
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-success" />
-                <a class="btn btn-primary" asp-action="Index">Geri</a>
-            </div>
+                <label asp-for="NewsImg" class="control-label"></label>
+                <input asp-for="NewsImg" class="form-control" />
+                <span asp-validation-for="NewsImg" class="text-danger"></span>
+                </div>*@
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-success" />
+                    <a class="btn btn-primary" asp-action="Index">Geri</a>
+                </div>
             </form>
         </div>
     </div>
