--- a/Xeber/Views/News/Details.cshtml
+++ b/Xeber/Views/News/Details.cshtml
@@ -4,19 +4,16 @@
     ViewData["Title"] = "Xəbər || Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-    <div class="container w-100">
+    <div style="margin-top:120px" class="container w-100">
+        @Html.Partial("_BreadCrumbs")
         <div style="display:inline-block">
-            @Html.Partial("_BreadCrumbs")
+
 
             <h2 style="width:750px;font-size:20px;font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif"> @Html.DisplayFor(modelItem => Model.NewsTitle)</h2>
-            <img style="border-radius:20px" src="~/img/@Model.NewsImg" width="500" height="350" asp-append-version="true" alt="...">
+            <img style="border-radius:10%;width:100%;height:auto" src="~/img/@Model.NewsImg" asp-append-version="true" alt="...">
             <p style="width:250px"> @Html.Raw(Model.NewsContent)</p>
             <p><b><time datetime="@Model.CreateDate.ToString("yyyy-MM-dd-HH-ss")">@Model.CreateDate.ToString("dd MMMM yyyy HH:ss")</time></b> tarixinde elave edildi</p>
-
-
-
         </div>
-      
     </div>
 
   
