--- a/Xeber/Views/News/Index.cshtml
+++ b/Xeber/Views/News/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer _localizer
 @model IEnumerable<News>
 @using X.PagedList.Mvc.Core
 @using X.PagedList
@@ -7,28 +8,28 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<partial name="_CookieConsentPartial" />
 @if (Model.Count() == 0)
 {
     <div class="bg-dark text-white p-1 m-1">
         <h2>Bu kategoriyaya aid xəbər yoxdur</h2>
     </div>
 }
-<div class=" justify-content-center">
 
+<div style="margin-top:100px" class="container-md">
     @if (ViewBag.sl is null && ViewBag.q == null)
     {
-        <div class="mb-3">
-            @Html.Partial("_Slider", Model)
-        </div>
+    <div class="mb-1 mt-1">
+        @Html.Partial("_Slider", Model)
+    </div>
     }
+<div class="container ml-5">
     @foreach (var item in Model)
     {
         <div class="card" style="margin-bottom:8px;display:inline-block">
             <a asp-action="Details" asp-route-id="@item.NewsId" style=" color:black">
                 <img src="~/img/@item.NewsImg" width="250" height="250" asp-append-version="true" alt="...">
                 <div class="card-body" style="height: 200px; overflow: hidden; width: 250px;">
-                    <h5 class="card-title"> @Html.DisplayFor(modelItem => item.NewsTitle)</h5>
+                    <h5 class="card-title">@_localizer[@item.NewsTitle]</h5>
                 </div>
             </a>
             <img src="~/lib/Icons/eye.svg" asp-append-version="true" width="25" height="20" />
@@ -38,7 +39,7 @@
             </div>
         </div>
     }
-
+</div>
     @*@if (Model.Count() > 0) {
             <div class="pagination justify-content-center">
                 @Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new { page }),
