--- a/Xeber/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/Xeber/Views/Shared/_SelectLanguagePartial.cshtml
@@ -14,13 +14,13 @@
         .ToList();
 }
 
-<div title="@Localizer["Request culture provider:"] @requestCulture?.Provider?.GetType().Name">
+<div style="width:25%" title="@Localizer["Request culture provider:"] @requestCulture?.Provider?.GetType().Name">
     <form id="selectLanguage" asp-controller="News"
           asp-action="SetLanguage" asp-route-returnUrl="@Context.Request.Path"
           method="post" class="form-horizontal" role="form">
         @Localizer["Language:"] <select name="culture"
                                         asp-for="@requestCulture.RequestCulture.UICulture.Name" asp-items="cultureItems"></select>
-        <button type="submit" class="btn btn-default btn-xs">Save</button>
+        <button type="submit" class="btn btn-success btn-xs">Save</button>
 
     </form>
 </div>
