--- a/Xeber/Views/Shared/_Slider.cshtml
+++ b/Xeber/Views/Shared/_Slider.cshtml
@@ -16,15 +16,30 @@
     </ol>
     <div class="carousel-inner">
         @{ var index = 0;}
-        @foreach (var item in Model.OrderByDescending(m=>m.CreateDate).Take(3))
+        @foreach (var item in Model.OrderByDescending(m => m.CreateDate).Take(3))
         {
             if (index == 0)
             {
                 <div class="carousel-item active">
                     <a asp-controller="News" asp-action="Details" asp-route-id="@item.NewsId">
-                        <img src="~/img/@item.NewsImg" class="d-block "style="width:100%;height:400px">
+                        <img src="~/img/@item.NewsImg" class="d-block " style="width:100%;height:400px" alt="@item.NewsTitle">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3 style="border-radius:10px;background-color:white" class=" text-dark">@item.NewsTitle</h3>
+                            <h4 style=" border-radius:10px;background-color:white" class=" text-dark">@item.NewsTitle</h4>
+                            <h2 style="text-align:center;width:400px;border-radius:10px;background-color:black" class=" text-danger">
+                                    <time datetime="@item.CreateDate.ToString("yyyy-MM-dd")">@item.CreateDate.ToString("dd MMMM yyyy")</time>                               
+                            </h2>
+                        </div>
+                    </a>
+                </div>
+                index++;            
+            }
+            else
+            {
+                <div class="carousel-item">
+                    <a asp-controller="News" asp-action="Details" asp-route-id="@item.NewsId">
+                        <img src="~/img/@item.NewsImg" class="d-block " style="width:100%;height:400px">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h4 style="border-radius:10px;background-color:white" class=" text-dark">@item.NewsTitle</h4>
                             <h2 style="text-align:center;width:400px;border-radius:10px;background-color:black" class=" text-danger">
                                 <b>
                                     <time datetime="@item.CreateDate.ToString("yyyy-MM-dd")">@item.CreateDate.ToString("dd MMMM yyyy")</time>
@@ -33,26 +48,9 @@
                         </div>
                     </a>
                 </div>
-            index++;
-        }
-        else
-          {
-            <div class="carousel-item">
-                <a asp-controller="News" asp-action="Details" asp-route-id="@item.NewsId">
-                    <img src="~/img/@item.NewsImg" class="d-block "style="width:100%;height:400px">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3 style="border-radius:10px;background-color:white" class=" text-dark">@item.NewsTitle</h3>
-                        <h2 style="text-align:center;width:400px;border-radius:10px;background-color:black" class=" text-danger">
-                            <b>
-                                <time datetime="@item.CreateDate.ToString("yyyy-MM-dd")">@item.CreateDate.ToString("dd MMMM yyyy")</time>
-                            </b>
-                        </h2>
-                    </div>
-                </a>
-            </div>
-           }
+            }
 
-         }
+        }
     </div>
         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
