https://github.com/Hesim97/Xeber.git

--- a/Xeber/Views/Admin/Details.cshtml
+++ b/Xeber/Views/Admin/Details.cshtml
@@ -46,6 +46,6 @@
     </dl>
 </div>
 <div>
-    <a class="btn btn-success" asp-action="Edit" asp-route-id="@Model.NewsId">Edit</a>
+    <a class="btn btn-success" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
     <a class="btn btn-primary" asp-action="Index">Geri</a>
 </div>
