--- a/Xeber/Views/Shared/_AdminLayout.cshtml
+++ b/Xeber/Views/Shared/_AdminLayout.cshtml
@@ -78,6 +78,7 @@
             <li><a asp-controller="Categories" asp-action="Index" class=" navbar-brand">Category</a></li>
 
             <li><a asp-controller="User" asp-action="Index" class=" navbar-brand">User</a></li>
+            <li><a asp-controller="NewsLangs" asp-action="Index" class=" navbar-brand">NewsLangs</a></li>
             @*<li> @Html.Partial("_Search")</li>*@
 
         </ul>
