--- a/Xeber/Views/Admin/Delete.cshtml
+++ b/Xeber/Views/Admin/Delete.cshtml
@@ -52,7 +52,7 @@
     </div>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="NewsId" />
+        <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> 
         <a class="btn btn-primary" asp-action="Index">Geri</a>
     </form>
