--- a/Xeber/Views/Admin/Edit.cshtml
+++ b/Xeber/Views/Admin/Edit.cshtml
@@ -18,7 +18,7 @@
         <div class="col-md-8">
             <form asp-action="Edit" method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="NewsId" />
+                <input type="hidden" asp-for="Id" />
                 <div class="form-group">
                     <label asp-for="NewsTitle" class="control-label"></label>
                     <input asp-for="NewsTitle" class="form-control" />
