--- a/Xeber/Views/News/Index.cshtml
+++ b/Xeber/Views/News/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer _localizer
-@model IEnumerable<News>
+@model IEnumerable<Xeber.Entity.News>
 @using X.PagedList.Mvc.Core
 @using X.PagedList
 @{
@@ -14,7 +14,6 @@
         <h2>Bu kategoriyaya aid xəbər yoxdur</h2>
     </div>
 }
-
 <div style="margin-top:100px" class="container-md">
     @if (ViewBag.sl is null && ViewBag.q == null)
     {
@@ -26,7 +25,7 @@
     @foreach (var item in Model)
     {
         <div class="card" style="margin-bottom:8px;display:inline-block">
-            <a asp-action="Details" asp-route-id="@item.NewsId" style=" color:black">
+            <a asp-action="Details" asp-route-id="@item.Id" style=" color:black">
                 <img src="~/img/@item.NewsImg" width="250" height="250" asp-append-version="true" alt="...">
                 <div class="card-body" style="height: 200px; overflow: hidden; width: 250px;">
                     <h5 class="card-title">@_localizer[@item.NewsTitle]</h5>
