--- a/Xeber/Views/Shared/_Slider.cshtml
+++ b/Xeber/Views/Shared/_Slider.cshtml
@@ -1,7 +1,9 @@
 ﻿@model IEnumerable<News>
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer _localizer
 <div id="carouselExampleCaptions" class=" carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-        @for (int i = 0; i < Model.OrderBy(m=>m.CreateDate).Take(3).Count(); i++)
+        @for (int i = 0; i < Model.OrderBy(m => m.CreateDate).Take(3).Count(); i++)
         {
             if (i == 0)
             {
@@ -21,22 +23,22 @@
             if (index == 0)
             {
                 <div class="carousel-item active">
-                    <a asp-controller="News" asp-action="Details" asp-route-id="@item.NewsId">
+                    <a asp-controller="News" asp-action="Details" asp-route-id="@item.Id">
                         <img src="~/img/@item.NewsImg" class="d-block " style="width:100%;height:400px" alt="@item.NewsTitle">
                         <div class="carousel-caption d-none d-md-block">
-                            <h4 style=" border-radius:10px;background-color:white" class=" text-dark">@item.NewsTitle</h4>
+                            <h4 style=" border-radius:10px;background-color:white" class=" text-dark">@_localizer[@item.NewsTitle]</h4>
                             <h2 style="text-align:center;width:400px;border-radius:10px;background-color:black" class=" text-danger">
-                                    <time datetime="@item.CreateDate.ToString("yyyy-MM-dd")">@item.CreateDate.ToString("dd MMMM yyyy")</time>                               
+                                <time datetime="@item.CreateDate.ToString("yyyy-MM-dd")">@item.CreateDate.ToString("dd MMMM yyyy")</time>
                             </h2>
                         </div>
                     </a>
                 </div>
-                index++;            
+                index++;
             }
             else
             {
                 <div class="carousel-item">
-                    <a asp-controller="News" asp-action="Details" asp-route-id="@item.NewsId">
+                    <a asp-controller="News" asp-action="Details" asp-route-id="@item.Id">
                         <img src="~/img/@item.NewsImg" class="d-block " style="width:100%;height:400px">
                         <div class="carousel-caption d-none d-md-block">
                             <h4 style="border-radius:10px;background-color:white" class=" text-dark">@item.NewsTitle</h4>
@@ -49,15 +51,14 @@
                     </a>
                 </div>
             }
-
         }
     </div>
-        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
